Added a validation so that .test() can't be called multiple times in the same test scenario.